--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "author": "Ashley Redman <ashley.redman@ajrsoftware.com>",
     "scripts": {
-        "build": "tsc src/ts/app.ts --outfile build/app.js && postcss src/css/app.css -o build/app.css",
+        "build": "tsc app/ts/app.ts --outfile build/app.js && postcss app/css/app.css -o build/app.css",
         "types": "tsc --noEmit",
-        "format": "prettier src/"
+        "format": "prettier app/"
     },
     "devDependencies": {
         "@types/node": "^20.3.1",
