--- a/wp-content/themes/thatforagingwitch/package.json
+++ b/wp-content/themes/thatforagingwitch/package.json
@@ -3,13 +3,24 @@
     "version": "1.0.0",
     "author": "Ashley Redman <ashley.redman@ajrsoftware.com>",
     "scripts": {
-        "build": "",
+        "css:watch": "npx tailwindcss -i ./app/src/app.css -o ./dist/output.css --watch",
+        "ts:watch": "",
+        "watch": "concurrently \"npm run css:watch\" \"npm run ts:watch\"",
+        "build": "npx tailwindcss -i ./app/src/app.css -o ./dist/output.css --minify",
         "types": "tsc --noEmit",
         "format": "prettier app/"
     },
     "devDependencies": {
         "@types/node": "^20.3.1",
+        "concurrently": "^8.2.0",
+        "laravel-mix": "^6.0.49",
+        "npm-check-updates": "^16.10.13",
         "prettier": "^2.8.8",
+        "tailwindcss": "^3.3.2",
         "typescript": "^5.1.3"
+    },
+    "dependencies": {
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.9"
     }
 }
