--- a/wp-content/themes/thatforagingwitch/package.json
+++ b/wp-content/themes/thatforagingwitch/package.json
@@ -4,23 +4,22 @@
     "author": "Ashley Redman <ashley.redman@ajrsoftware.com>",
     "scripts": {
         "css:watch": "npx tailwindcss -i ./app/src/app.css -o ./dist/output.css --watch",
-        "ts:watch": "",
+        "ts:watch": "tsc app/src/app.ts --outfile dist/app.js -w",
         "watch": "concurrently \"npm run css:watch\" \"npm run ts:watch\"",
-        "build": "npx tailwindcss -i ./app/src/app.css -o ./dist/output.css --minify",
+        "build": "npx tailwindcss -i ./app/src/app.css -o ./dist/output.css --minify && tsc app/src/app.ts --outfile dist/app.js",
         "types": "tsc --noEmit",
-        "format": "prettier app/"
+        "format": "prettier app/ --write"
     },
     "devDependencies": {
         "@types/node": "^20.3.1",
         "concurrently": "^8.2.0",
-        "laravel-mix": "^6.0.49",
         "npm-check-updates": "^16.10.13",
         "prettier": "^2.8.8",
-        "tailwindcss": "^3.3.2",
-        "typescript": "^5.1.3"
+        "tailwindcss": "^3.3.2"
     },
     "dependencies": {
         "@tailwindcss/forms": "^0.5.3",
-        "@tailwindcss/typography": "^0.5.9"
+        "@tailwindcss/typography": "^0.5.9",
+        "typescript": "^5.1.3"
     }
 }
